# VDS_TARS

./: .editorconfig  .env.eval.example  .env.example  .env.security.example  .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG_PHASE9.md  CONTRIBUTING.md  Dockerfile  Makefile  PHASE10_IMPLEMENTATION_SUMMARY.md  PHASE10_QUICKSTART.md  PHASE11_2_QUICKSTART.md  PHASE11_4_IMPLEMENTATION_SUMMARY.md  PHASE11_5_IMPLEMENTATION_REPORT.md  PHASE11_5_IMPLEMENTATION_SUMMARY.md  PHASE11_5_QUICKSTART.md  PHASE12_PART2_IMPLEMENTATION_SUMMARY.md  PHASE12_PART2_PROGRESS.md  PHASE12_PART3_PROGRESS.md  PHASE13_6_IMPLEMENTATION_REPORT.md  PHASE13_7_IMPLEMENTATION_REPORT.md  PHASE13_8_COMPLETION_REPORT.md  PHASE14_1_QUICKSTART.md  PHASE14_1_SESSION1_SUMMARY.md  PHASE14_1_SESSION2_SUMMARY.md  PHASE14_1_SESSION3_SUMMARY.md  PHASE14_2_QUICKSTART.md  PHASE14_4_IMPLEMENTATION_REPORT.md  PHASE14_5_IMPLEMENTATION_REPORT.md  PHASE14_6_IMPLEMENTATION_SEQUENCE.md  PHASE14_6_PHASE6_COMPLETION_SUMMARY.md  PHASE14_6_PHASE7_COMPLETION_SUMMARY.md  PHASE14_6_PHASE8_COMPLETION_SUMMARY.md  PHASE14_6_PHASE9_SESSION2_SUMMARY.md  PHASE14_7_TASK2_COMPLETION_SUMMARY.md  PHASE2_IMPLEMENTATION_REPORT.md  PHASE3_QUICKSTART.md  PHASE4_IMPLEMENTATION_REPORT.md  (+24 more)
.claude/: settings.local.json
Reference Docs/: planning-localllm.md
agents/: README.md
analytics/: __init__.py  alerting_engine.py  html_renderer.py  org_alerting_engine.py  org_health_aggregator.py  org_sla_intelligence.py  org_temporal_intelligence.py  org_trend_correlation.py  report_aggregator.py  repository_health_dashboard.py  run_alerts.py  run_org_alerts.py  run_org_health.py  run_org_sla_intelligence.py  run_org_temporal_intelligence.py  run_org_trend_correlation.py  run_trends.py  trend_analyzer.py
argocd/: README.md  tars-production.yaml  tars-staging.yaml
backend/: README.md  requirements.txt
benchmarks/: eval_latency_bench.py  regression_detector_bench.py  throughput_bench.py
canary/: test_canary_auto_rollback.py  test_canary_metric_slo_guardrails.py  test_canary_rollout_smoke.py
cognition/: __init__.py
compliance/: __init__.py  audit.py  controls.py  enforcer.py
deploy/: README.md  backup-tars.sh  config-doctor.sh  docker-compose.home.yml  generate-support-bundle.sh  install-tars-home.sh  mount-nas.sh  restore-tars.sh  start-tars-home.sh  tars-home.env.template  tars-home.yml  validate-deployment.sh  validate-rag.sh  validate-security.sh
docker/: README.md
docs/: ADOPTION_GUIDE.md  ALERTING_ENGINE_GUIDE.md  BACKUP_RECOVERY.md  CONFIGURATION_GUIDE.md  CONFIG_DOCTOR.md  DEPLOYMENT_VALIDATION.md  GO_NO_GO_HOME.md  INCIDENT_PLAYBOOK.md  INSTALL_HOME.md  MVP_PROGRESS_VISUALIZATION.md  OPS_RUNBOOK.md  ORG_ALERTING_AND_ESCALATION_ENGINE.md  ORG_HEALTH_GOVERNANCE_GUIDE.md  ORG_SLA_INTELLIGENCE_ENGINE.md  ORG_TEMPORAL_INTELLIGENCE_ENGINE.md  ORG_TREND_CORRELATION_ENGINE.md  PHASE14_6_API_GUIDE.md  PHASE14_6_DOCKER.md  PHASE14_6_ENTERPRISE_HARDENING.md  PHASE14_6_PRODUCTION_RUNBOOK.md  PHASE14_6_QUICKSTART.md  PHASE14_7_TASK6_COMPLETION_SUMMARY.md  PHASE14_8_TASK2_COMPLETION_SUMMARY.md  PHASE14_8_TASK3_COMPLETION_SUMMARY.md  PHASE14_9_GA_RELEASE_SUMMARY.md  POST_GA_GOVERNANCE.md  PRODUCTION_RUNBOOK.md  RAG_VALIDATION.md  RELEASE_PUBLISHER_GUIDE.md  RELEASE_ROLLBACK_GUIDE.md  RELEASE_VERIFIER_GUIDE.md  REPOSITORY_HEALTH_DASHBOARD_GUIDE.md  REPOSITORY_INTEGRITY_SCANNER_GUIDE.md  SECURITY_VALIDATION_HOME.md  SUPPORT_BUNDLE.md  TREND_ANALYZER_GUIDE.md
enterprise_api/: __init__.py  app.py  main.py  models.py  security.py
enterprise_config/: __init__.py  loader.py  schema.py
examples/: api_client.py  certificate_monitoring_demo.py  compliance_check.sh  generate_signed_report.py
integrity/: __init__.py  repository_integrity_scanner.py
internal_adoption/: README.md  github_issues_import.py  onboard.sh  slack_integration.sh
k8s/: backend-deployment.yaml  chromadb-deployment.yaml  configmap.yaml  ingress.yaml  namespace.yaml  ollama-deployment.yaml  postgres-deployment.yaml  pvc.yaml  redis-deployment.yaml  service-backend.yaml  service-chromadb.yaml  service-ollama.yaml  service-postgres.yaml  service-redis.yaml
metrics/: __init__.py  logging_config.py  telemetry.py
mlsync/: Dockerfile  parameter-bridge.py  (+1 more)
(+621 files in other folders)
