[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tars-observability"
version = "1.0.2-pre"
description = "T.A.R.S. Phase 14.6 - Post-GA 7-Day Stabilization & Retrospective Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Veleron Dev Studios", email = "engineering@veleron.dev"}
]
maintainers = [
    {name = "T.A.R.S. Engineering Team", email = "tars@veleron.dev"}
]
keywords = [
    "observability",
    "monitoring",
    "retrospective",
    "sre",
    "ga-monitoring",
    "stability",
    "anomaly-detection",
    "reinforcement-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed"
]

dependencies = [
    "prometheus-client>=0.17.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0"
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.1"
]

docker = [
    "gunicorn>=21.2.0",
    "uvicorn>=0.23.0"
]

[project.urls]
Homepage = "https://github.com/veleron-dev/tars"
Documentation = "https://github.com/veleron-dev/tars/tree/main/docs"
Repository = "https://github.com/veleron-dev/tars"
"Issue Tracker" = "https://github.com/veleron-dev/tars/issues"
Changelog = "https://github.com/veleron-dev/tars/blob/main/CHANGELOG_PHASE14_6.md"

[project.scripts]
tars-ga-kpi = "tars_observability.cli.ga_kpi:main"
tars-stability-monitor = "tars_observability.cli.stability_monitor:main"
tars-anomaly-detector = "tars_observability.cli.anomaly_detector:main"
tars-health-report = "tars_observability.cli.health_reporter:main"
tars-regression-analyzer = "tars_observability.cli.regression_analyzer:main"
tars-retro = "tars_observability.cli.retrospective:main"

[tool.setuptools]
packages = ["tars_observability", "tars_observability.cli", "tars_observability.core"]

[tool.setuptools.package-data]
tars_observability = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "smoke: Smoke tests",
    "slow: Slow tests",
    "cognition: Tests for cognition module"
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.coverage.run]
source = ["tars_observability"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/cli/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:"
]
